--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -9,8 +9,13 @@
     width:80%;
     height:50px;
     margin-top: 40px;
-    border-bottom: solid #1c1c1c;
+    border-bottom: solid 1.1px #1c1c1c;
     display: flex;
+
+    justify-content: space-between;
+   
+    margin-left: 5px;
+    width: 80%;
 }
 .div-map{   
     display: flex;
@@ -24,3 +29,48 @@
     
     font-size: 30px;
 }
+
+.btn-edit{
+    justify-content: flex-end;
+    place-content: right;
+    display: flex;
+    transform: translate(0,10%);
+    font-family: sans-serif, arial;
+    font-weight: normal;
+    font-size: 13px;
+    padding: 10px 10px;
+    background: none;
+    color: #1c1c1c;
+    border: 1.1px solid #1c1c1c;
+    cursor: pointer;
+    margin-right: 10px;
+    margin-bottom: 10px;
+
+
+ 
+  }
+  .btn-edit:active, .btn:focus{
+    outline: none;
+  }
+  .btn-edit:hover{
+    color: #fff;
+    box-shadow: 0px 4px 8px 1px #000;
+    transition: all .2s ease;
+  }
+  .btn-edit::after{
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 0px;
+    height: 0px;
+    background: #1c1c1c;
+    transform-origin: left bottom;
+    transition-property: width height;
+    transition-duration: 0.1s;
+    z-index: -1;
+  }
+  .btn-edit:hover::after{
+    width: 100%;
+    height: 100%;
+  }
