--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -46,6 +46,7 @@
 .input-password, .input-nickname {
     width: 400px;
     height: 50px;
+    margin-bottom: 35px;
     
 }
 
@@ -63,7 +64,7 @@
     border: 1px solid aqua;
     border-radius: 50%;
     font-size: 12px;
-    margin-top: 30px;
+    margin-top: 5px;
     
 
 }
