--- a/src/pages/Board/Board_Main.scss
+++ b/src/pages/Board/Board_Main.scss
@@ -27,7 +27,8 @@
 .btn,.btn-mine{
     justify-content: flex-end;
     place-content: right;
-   
+    width: auto ;
+    height: 40px;
     transform: translate(0,10%);
     font-family: sans-serif, arial;
     font-weight: normal;
@@ -65,4 +66,10 @@
   .btn:hover::after{
     width: 100%;
     height: 100%;
+  }
+  .input-search{
+    font-size: 12px;
+    width: auto;
+    height: 29px;
+    margin-top: 6px;
   }
