board delete 기능 구현 완료

--- a/src/pages/Vinyl/Vinyl.css
+++ b/src/pages/Vinyl/Vinyl.css
@@ -18,4 +18,10 @@
 .p-vinylmenu:hover{
     color: aqua;
     background-color: black;
-}   
+}  
+
+.div-vinylitemcontainer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 4fr));
+  grid-template-rows: repeat(auo-fit, minmax(200px, 4fr));
+}
