--- a/src/pages/OrderSubmit/Orderdetail.css
+++ b/src/pages/OrderSubmit/Orderdetail.css
@@ -33,9 +33,11 @@
     font-weight: bold;
 }
 
-.orderlisticon{
+.AiIcon_orderDown{
   font-size: 16px;
   margin-left:15px;
+  margin-top: 13px;
+  margin-bottom: 8px;
 
 }
 .ordertitle{
