style: edit styles in Orderdetail

--- a/src/pages/OrderSubmit/Orderdetail.css
+++ b/src/pages/OrderSubmit/Orderdetail.css
@@ -33,7 +33,7 @@
     font-weight: bold;
 }
 
-.AiIcon_orderDown{
+.AiIcon_orderUpDown{
   font-size: 16px;
   margin-left:15px;
   margin-top: 13px;
