--- a/src/pages/OrderSubmit/Orderdetail.css
+++ b/src/pages/OrderSubmit/Orderdetail.css
@@ -1,4 +1,11 @@
 
+.orderdetail_dropdown{
+    border: 1px solid #d8d8d8;
+    border-radius: 10px;
+    margin-top:10px;
+    margin-bottom: 10px;
+    padding: 10px
+}
 .frame1{
    
     width: auto;
