--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -1,4 +1,12 @@
 
+.div-all{
+    background-color: #ffffff;
+    width:80%;
+    place-content:center;
+    flex-direction: column;
+    margin: auto;
+    display: grid;
+}
 
 .div-title{
     margin-top: 50px;
