--- a/src/pages/OrderSubmit/Orderdetail.css
+++ b/src/pages/OrderSubmit/Orderdetail.css
@@ -32,6 +32,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 3px;
+  margin-top: 10px;
 }    
 .selectedPayment{
     border: 1px sold rgb(73, 179, 187);
