--- a/src/pages/OrderSubmit/AddressItem.css
+++ b/src/pages/OrderSubmit/AddressItem.css
@@ -1,11 +1,12 @@
 .AddressItem-dividebox{
-    background: #f2f2f2;
+    background: #f5f5f5;
     width:auto;
     height: 10px;
     margin-bottom: 10px;
 
 }
 .AddressItem-container{
-    margin-left: 0px;
-    margin-right: 0px
+    margin-left: 20px;
+    margin-right: 20px;
+    
 }
