--- a/src/pages/OrderSubmit/Orderdetail.css
+++ b/src/pages/OrderSubmit/Orderdetail.css
@@ -4,6 +4,7 @@
     border-radius: 10px;
     margin-top:10px;
     margin-bottom: 10px;
+    width: 350px;
     padding: 10px
 }
 .frame1{
@@ -25,7 +26,7 @@
   background-color: black;
   color: white;
   font-weight: bold;
-  width: 80%;
+
   height: 43px;
   font-size: 14px;
   display: flex;
@@ -51,7 +52,7 @@
 
 
 .orderdetail-paypal-container{
-    width: 100%;
+ 
     height: 43px;
     
 }
