Design: Add CSS class for controlling overflow property

--- a/src/pages/OrderSubmit/Orderdetail.css
+++ b/src/pages/OrderSubmit/Orderdetail.css
@@ -56,3 +56,10 @@
     height: 43px;
     
 }
+/* CSS 파일 또는 스타일 코드에 추가 */
+body.modal-open {
+    overflow: hidden;
+}
+/* CSS 파일 또는 스타일 코드에 추가 */
+
+  
